--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+body{
+    background-color: rgb(218, 218, 228);
+}
 
 Header{
     background-color: #31343d;
@@ -8,9 +10,9 @@ Header{
 h1{
     position: absolute;
     top: -2%;
-    padding-left: 18px;
-    padding-right: 18px;
-    margin-left: 1%;
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-left: 10%;
     font-size: 50px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color:#31343d;
@@ -27,29 +29,42 @@ nav ul li{
 a:link{
     position: relative;
     padding: 10px;
-    left: 500px;
-    font-size: 22px;
+    left: 850px;
+    font-size: 30px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     display: block;
     color: #91cbcd;
 }
 
+a:hover{
+    color: white;
+}
+
 .about-me{
-    font-size: 30px;
+    position: absolute;
+    left: 230px;
+    top: 216px;
+    font-size: 20px;
     color: #445877;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
 
 .work{
-    font-size: 30px;
+    position: absolute;
+    left: 230px;
+    top: 432px;
+    font-size: 20px;
     color: #445877;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
 
 .contact-me{
-    font-size: 30px;
+    position: absolute;
+    left: 230px;
+    top: 648px;
+    font-size: 20px;
     color: #445877;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
