--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@ h1{
     border-radius: 100px;
 }
 
+.banner{
+    margin-left: 5%;
+    margin-right: 10%;
+    padding: 15px;
+    font-size: 30px;
+    width: 100%;
+    background-color: rebeccapurple;
+
+}
+
+
 nav ul li{
     display: inline-block;
 }
