--- a/assets/style.css
+++ b/assets/style.css
@@ -9,22 +9,21 @@ Header{
 
 h1{
     position: absolute;
-    top: 2%;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-left: 5%;
+    top: 0%;
+    padding-left: 200px;
+    padding-right: 40px;    
     font-size: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #31343d;
     background-color: #9ea7a7;
     border: solid;
     border-color: 31343d;
-    border-radius: 100px;
+    border-radius: 0 15px 15px 0;
 }
 
 .banner img{
     width: 1465px;
-    height: 115px;
+    height: 280px;
     margin-bottom: 2%;
 }
 
@@ -47,21 +46,26 @@ a:hover{
     color: white;
 }
 
-.about-me{
+#about-me{
     position: absolute;
     left: 100px;
-    top: 216px;
-    font-size: 20px;
+    top: 390px;
+    font-size: 22px;
     color: #445877;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
+#about-me .bio{
+    position: relative;
+    left: 400px;
+     text-wrap:balance;
 }
 
 .work{
     position: absolute;
     left: 100px;
-    top: 432px;
-    font-size: 20px;
+    top: 780px;
+    font-size: 22px;
     color: #445877;
     border-right: 3px solid #445877;
     height: 200px;
@@ -72,8 +76,8 @@ a:hover{
 .contact-me{
     position: absolute;
     left: 100px;
-    top: 648px;
-    font-size: 20px;
+    top: 1360px;
+    font-size: 22px;
     color: #445877;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
@@ -87,9 +91,7 @@ a:hover{
 }
 
 p{
-    margin-left: 300px;
     font-size: 15px;
-    margin: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
