--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,18 @@
-body{
-    background-color: rgb(218, 218, 228);
+* {
+    margin: 0%;
+    padding: 0%;
 }
 
-Header{
+body { 
+    background-color: rgb(198, 198, 198);
+}
+
+Header {
     background-color: #31343d;
-    padding: 1px;
 }
 
-h1{
+h1 {
     position: absolute;
-    top: 0%;
     padding-left: 200px;
     padding-right: 40px;    
     font-size: 40px;
@@ -22,8 +25,8 @@ h1{
 }
 
 .banner img{
-    width: 1536px;
-    height: 280px;
+    width: 1905px;
+    height: 130px;
     margin-bottom: 2%;
 }
 
@@ -34,8 +37,10 @@ nav ul li{
 
 a:link{
     position: relative;
+    display: flex;
+    flex-wrap: wrap;
     padding: 15px;
-    left: 850px;
+    left: 1300px;
     font-size: 23px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     display: block;
@@ -47,90 +52,50 @@ a:hover{
 }
 
 .about h2{
-    position: absolute;
-    left: 100px;
-    top: 406px;
+    position: relative;
+    display: block;
+    margin-left: 200px;
+    width: 200px;
     font-size: 40px;
+    text-align: right;
     color: #31343d;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    border-right: 3px solid black;
+    padding-right: 25px;
+    height: 240px;
+
 }
+    
+
 
 .about .bio{
     position: absolute;
-    left: 323px;
-    top: 420px;
+    left: 500px;
+    top: 240px;
     text-wrap: balance;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 
 .work h2{
-    position: absolute;
-    text-wrap: balance;
-    left: 172px;
-    top: 727px;
+    position: relative;
+    display: block;
+    margin-left: 200px;
+    width: 200px;
+    top: 100px;
     font-size: 40px;
+    text-align: right;
     color: #31343d;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;a Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, 'Sans', Arial, sans-serif;
 }
 
-
-.work .work-experience-1 img{
-    position: relative;
-    top: 364px;
-    left: 317px;
-    width: 1074px;
-    border: 5px solid black;
-    height: 300px;
-}
-
-.work .work-experience-2 img{
-    position: relative;
-    top: 380px;
-    left: 317px;
-    width: 520px;
-    border: 5px solid black;
-    height: 150px;
-}
-
-.work .work-experience-3 img{
-    position: relative;
-    top: 402px;
-    left: 876px;
-    width: 520px;
-    border: 5px solid black;
-    height: 150px;
-}
-
-.work .work-experience-4 img{
-    position: relative;
-    top: 61px;
-    left: 873px;
-    width: 520px;
-    border: 5px solid black;
-    height: 150px;
-}
-
-.work .work-experience-5 img{
-    position: relative;
-    top: 83px;
-    left: 317px;
-    width: 520px;
-    border: 5px solid black;
-    height: 150px;
-}
-
-.work{
-    display: flex;
-    flex-direction: column;
-}
 
 
 .contact h2{
     position: absolute;
-    text-wrap: balance;
-    left: 69px;
-    top: 1500px;;
+    display: block;
+    margin-left: 200px;
+    top: 1500px;
     font-size: 40px;
     color: #31343d;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -149,7 +114,7 @@ a:hover{
 .contact ul{
     text-wrap: balance;
     position: relative;
-    top: 250px;
+    top: 1500px;
     text-align: center;
 }
 
@@ -157,3 +122,4 @@ p{
     font-size: 17px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
