--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,7 @@ a:hover{
 
 .about h2{
     position: relative;
-    margin-left: 200px;
+    margin-left: 120px;
     width: 200px;
     font-size: 40px;
     text-align: right;
@@ -69,8 +69,9 @@ a:hover{
 
 .about .bio{
     position: absolute;
-    left: 500px;
+    left: 450px;
     top: 240px;
+    width: 60%;
     text-wrap: balance;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -79,7 +80,7 @@ a:hover{
 .work h2{
     position: relative;
     display: block;
-    margin-left: 200px;
+    margin-left: 120px;
     width: 200px;
     top: 100px;
     font-size: 40px;
@@ -92,24 +93,62 @@ a:hover{
 }
 
 .work .experience-1 img{
-    position: relative;
     display:block;
-    top: -600;
-    left: 500;
-    width: 56%;
-    height: 200px;
-    border: 10px solid black;
-}
+    position: relative;
+    margin: auto;
+    margin-top: -702px;
+    background: #0a37bc;
+    width: 1000px;
+    height:200px;
+    z-index: -1;
+    border: #31343d solid 10px;
+} 
+
+.work .experience-1-banner{
+    display: block;
+    position: relative;
+    margin-left: 1250px;
+    margin-top: -600px;
+    background: #0a37bc;
+    width: 200px;
+    height: 50px;
+    border: #31343d solid 5px;
+} 
+
+.work .experience-2-banner{
+    display: block;
+    position: relative;
+    margin-left: 445px;
+    margin-top: 20px;
+    background: #a6ada5;
+    width: 480px;
+    height:200px;
+    border: #31343d solid 10px;
+} 
 
 .work .experience-2 img{
-    position: relative;
     display:block;
-    top: -580;
-    left: 500;
-    width: 26%;
-    height: 200px;
-    border: 10px solid black;
+    position: relative;
+    margin: auto;
+    margin-top: 200px;
+    background: #0a37bc;
+    width: 1000px;
+    height:200px;
+    z-index: -1;
+    border: #31343d solid 10px;
 }
+
+
+.work .experience-3-banner{
+    display: block;
+    position: relative;
+    margin-left: 965px;
+    margin-top: -219px;
+    background: #632794;
+    width: 480px;
+    height: 200px;
+    border: #31343d solid 10px;
+} 
 
 .work .experience-3 img{
     position: relative;
@@ -121,6 +160,17 @@ a:hover{
     border: 10px solid black;
 }
 
+.work .experience-4-banner{
+    display: block;
+    position: relative;
+    margin-left: 445px;
+    margin-top: 20px;
+    background-image: #4fc140;
+    width: 480px;
+    height:200px;
+    border: #31343d solid 10px;
+} 
+
 .work .experience-4 img{
     position: relative;
     display: block;
@@ -130,6 +180,17 @@ a:hover{
     height: 200px;
     border: 10px solid black;
 }
+
+.work .experience-5-banner{
+    display: block;
+    position: relative;
+    margin-left: 965px;
+    margin-top: -219px;
+    background: #13bc8c;
+    width: 480px;
+    height: 200px;
+    border: #31343d solid 10px;
+} 
 
 .work .experience-5 img{
     position: relative;
@@ -141,12 +202,10 @@ a:hover{
     border: 10px solid black;
 }
 
-
-
 .contact h2{
     position: absolute;
     display: block;
-    margin-left: 200px;
+    margin-left: 120px;
     top: 1500px;
     font-size: 40px;
     color: #31343d;
