--- a/assets/style.css
+++ b/assets/style.css
@@ -77,7 +77,7 @@ a:hover{
 }
 
 
-.work h2{
+#work h2{
     position: relative;
     display: block;
     margin-left: 120px;
@@ -92,115 +92,107 @@ a:hover{
     height: 700px;
 }
 
-.work .experience-1 img{
-    display:block;
-    position: relative;
-    margin: auto;
-    margin-top: -702px;
-    background: #0a37bc;
-    width: 1000px;
-    height:200px;
+#work .experience-1 img{
+    position: absolute;
+    left: 450px;
+    top: 570px;
+    width: 1050px;
+    height: 200px;
     z-index: -1;
-    border: #31343d solid 10px;
+    border: #31343d solid 5px;
 } 
 
-.work .experience-1-banner{
-    display: block;
-    position: relative;
-    margin-left: 1250px;
-    margin-top: -600px;
+#work .experience-1-banner{
+    position: absolute;
+    left: 1300px;
+    top: 720px;
     background: #0a37bc;
     width: 200px;
     height: 50px;
     border: #31343d solid 5px;
 } 
 
-.work .experience-2-banner{
-    display: block;
-    position: relative;
-    margin-left: 445px;
-    margin-top: 20px;
-    background: #a6ada5;
-    width: 480px;
-    height:200px;
-    border: #31343d solid 10px;
-} 
-
-.work .experience-2 img{
-    display:block;
-    position: relative;
-    margin: auto;
-    margin-top: 200px;
-    background: #0a37bc;
-    width: 1000px;
-    height:200px;
+#work .experience-2 img{
+    position: absolute;
+    left: 450px;
+    top: 800;
+    width: 510px;
+    height: 200px;
     z-index: -1;
-    border: #31343d solid 10px;
+    border: #31343d solid 5px;
+}
+
+#work .experience-2-banner{
+    position: absolute;
+    left: 760px;
+    top: 950px;
+    background: #9a9ca0;
+    width: 200px;
+    height: 50px;
+    border: #31343d solid 5px;
+}
+
+#work .experience-3 img{
+    position: absolute;
+    left: 990px;
+    top: 800;
+    width: 510px;
+    height: 200px;
+    z-index: -1;
+    border: #31343d solid 5px;
 }
 
 
-.work .experience-3-banner{
-    display: block;
-    position: relative;
-    margin-left: 965px;
-    margin-top: -219px;
-    background: #632794;
-    width: 480px;
-    height: 200px;
-    border: #31343d solid 10px;
+#work .experience-3-banner{
+    position: absolute;
+    left: 1300px;
+    top: 950px;
+    background: #94aee1;
+    width: 200px;
+    height: 50px;
+    border: #31343d solid 5px;
 } 
 
-.work .experience-3 img{
-    position: relative;
-    display:block;
-    top: -800px;
-    left: 1070px;
-    width: 26%;
+#work .experience-4 img{
+    position: absolute;
+    left: 990px;
+    top: 1030;
+    width: 510px;
     height: 200px;
-    border: 10px solid black;
+    z-index: -1;
+    border: #31343d solid 5px;
 }
 
-.work .experience-4-banner{
-    display: block;
-    position: relative;
-    margin-left: 445px;
-    margin-top: 20px;
-    background-image: #4fc140;
-    width: 480px;
-    height:200px;
-    border: #31343d solid 10px;
+#work .experience-4-banner{
+    position: absolute;
+    left: 1300px;
+    top: 1180px;
+    background: #ace194;
+    width: 200px;
+    height: 50px;
+    border: #313d36 solid 5px;
 } 
 
-.work .experience-4 img{
-    position: relative;
-    display: block;
-    top: -780px;
-    left: 500px;
-    width: 26%;
+#work .experience-5 img{
+    position: absolute;
+    top: 1030px;
+    left: 450px;
+    width: 510px;
     height: 200px;
-    border: 10px solid black;
-}
-
-.work .experience-5-banner{
-    display: block;
-    position: relative;
-    margin-left: 965px;
-    margin-top: -219px;
-    background: #13bc8c;
-    width: 480px;
-    height: 200px;
-    border: #31343d solid 10px;
+    z-index: -1;
+    border: 5px solid black;
 } 
 
-.work .experience-5 img{
-    position: relative;
-    display:block;
-    top: -1000px;
-    left: 1070px;
-    width: 26%;
-    height: 200px;
-    border: 10px solid black;
-}
+#work .experience-5-banner{
+    position: absolute;
+    left: 760px;
+    top: 1180px;
+    background: #e63088;
+    width: 200px;
+    height: 50px;
+    border: #313d36 solid 5px;
+} 
+
 
 .contact h2{
     position: absolute;
@@ -210,7 +202,12 @@ a:hover{
     font-size: 40px;
     color: #31343d;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    border-right: 3px solid black;
+    padding-right: 25px;
+    height: 100px;
 }
+
+
 
 .contact ul li{
     text-wrap: balance;
@@ -225,9 +222,19 @@ a:hover{
 .contact ul{
     text-wrap: balance;
     position: relative;
-    top: 100px;
+    top: 350px;
     text-align: center;
 }
+
+footer{
+    position: relative;
+    text-wrap: balance;
+    text-align: center;
+    top: 500;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding-bottom: 50px;
+}
+
 
 p{
     font-size: 17px;
