--- a/assets/style.css
+++ b/assets/style.css
@@ -8,24 +8,33 @@ body {
 }
 
 Header {
+    display: flex;
+    flex: 1;
     background-color: #31343d;
 }
 
-h1 {
-    position: absolute;
-    padding-left: 200px;
-    padding-right: 40px;    
+header h1 {
+    display: flex;
+    width: 47%;  
+    margin: 10px;
+    margin-left: 20px;
     font-size: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #31343d;
-    background-color: #9ea7a7;
-    border: solid;
-    border-color: 31343d;
-    border-radius: 0 15px 15px 0;
+    color: #9ea7a7;
 }
 
+.banner h2{
+    display: flex;
+    color: black;
+    font-size: 35px;
+    margin-top: -84px;
+    margin-left: 1129px;
+}
+
+
 .banner img{
-    width: 1905px;
+    display:flex;
+    width: 100%;
     height: 130px;
     margin-bottom: 2%;
     border-bottom: 5px solid rgb(220, 183, 179);
@@ -33,18 +42,19 @@ h1 {
 
 
 header nav ul li{
-    display: inline-block;
+    display: flex;
+    flex: 1;
+    float: left;
 }
 
+
+
 a:link{
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
+    flex: 1;
     padding: 15px;
-    left: 1300px;
+    margin-left: 50;
     font-size: 23px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: block;
     color: #9ea7a7;
 }
 
@@ -52,11 +62,15 @@ a:hover{
     color: white;
 }
 
+.about #work .contact h2{
+    display: flex;
+}
+
 .about h2{
-    position: relative;
     margin-left: 120px;
+    margin-top: 56px;
     width: 200px;
-    font-size: 40px;
+    font-size: 30px;
     text-align: right;
     color: #31343d;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -79,11 +93,10 @@ a:hover{
 
 #work h2{
     position: relative;
-    display: block;
     margin-left: 120px;
     width: 200px;
     top: 100px;
-    font-size: 40px;
+    font-size: 30px;
     text-align: right;
     color: #31343d;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, 'Sans', Arial, sans-serif;
@@ -96,7 +109,7 @@ a:hover{
     position: absolute;
     left: 450px;
     top: 570px;
-    width: 1050px;
+    width: 750px;
     height: 200px;
     z-index: -1;
     border: #31343d solid 5px;
@@ -104,10 +117,10 @@ a:hover{
 
 #work .experience-1-banner{
     position: absolute;
-    left: 1300px;
+    left: 1050px;
     top: 720px;
     background: #0a37bc;
-    width: 200px;
+    width: 150px;
     height: 50px;
     border: #31343d solid 5px;
 } 
@@ -116,7 +129,7 @@ a:hover{
     position: absolute;
     left: 450px;
     top: 800;
-    width: 510px;
+    width: 340px;
     height: 200px;
     z-index: -1;
     border: #31343d solid 5px;
@@ -124,19 +137,19 @@ a:hover{
 
 #work .experience-2-banner{
     position: absolute;
-    left: 760px;
+    left: 640px;
     top: 950px;
     background: #9a9ca0;
-    width: 200px;
+    width: 150px;
     height: 50px;
     border: #31343d solid 5px;
 }
 
 #work .experience-3 img{
     position: absolute;
-    left: 990px;
+    left: 860px;
     top: 800;
-    width: 510px;
+    width: 340px;
     height: 200px;
     z-index: -1;
     border: #31343d solid 5px;
@@ -145,19 +158,19 @@ a:hover{
 
 #work .experience-3-banner{
     position: absolute;
-    left: 1300px;
+    left: 1050px;
     top: 950px;
     background: #94aee1;
-    width: 200px;
+    width: 150px;
     height: 50px;
     border: #31343d solid 5px;
 } 
 
 #work .experience-4 img{
     position: absolute;
-    left: 990px;
+    left: 860px;
     top: 1030;
-    width: 510px;
+    width: 340px;
     height: 200px;
     z-index: -1;
     border: #31343d solid 5px;
@@ -165,10 +178,10 @@ a:hover{
 
 #work .experience-4-banner{
     position: absolute;
-    left: 1300px;
+    left: 1050px;
     top: 1180px;
     background: #ace194;
-    width: 200px;
+    width: 150px;
     height: 50px;
     border: #313d36 solid 5px;
 } 
@@ -177,7 +190,7 @@ a:hover{
     position: absolute;
     top: 1030px;
     left: 450px;
-    width: 510px;
+    width: 340px;
     height: 200px;
     z-index: -1;
     border: 5px solid black;
@@ -185,10 +198,10 @@ a:hover{
 
 #work .experience-5-banner{
     position: absolute;
-    left: 760px;
+    left: 640px;
     top: 1180px;
     background: #e63088;
-    width: 200px;
+    width: 150px;
     height: 50px;
     border: #313d36 solid 5px;
 } 
@@ -196,10 +209,9 @@ a:hover{
 
 .contact h2{
     position: absolute;
-    display: block;
-    margin-left: 120px;
+    margin-left: 162px;
     top: 1500px;
-    font-size: 40px;
+    font-size: 30px;
     color: #31343d;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-right: 3px solid black;
@@ -212,25 +224,22 @@ a:hover{
 .contact ul li{
     text-wrap: balance;
     display: inline;
-    text-decoration: underline;
     font-size: 25px;
-    padding: 40px;    
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
 
 .contact ul{
-    text-wrap: balance;
-    position: relative;
-    top: 350px;
     text-align: center;
+    margin-top: 350px;
+    margin-left: 130px;
+
 }
 
 footer{
-    position: relative;
     text-wrap: balance;
     text-align: center;
-    top: 500;
+    margin-top: 80px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding-bottom: 50px;
 }
