--- a/assets/style.css
+++ b/assets/style.css
@@ -1,252 +1,65 @@
-* {
-    margin: 0%;
-    padding: 0%;
-}
-
-body { 
-    background-color: rgb(198, 198, 198);
-}
-
-Header {
+.wrapper{
     display: flex;
-    flex: 1;
-    background-color: #31343d;
+    flex-flow: row wrap;
+    text-align: center;
 }
 
-header h1 {
-    display: flex;
-    width: 47%;  
+.wrapper>*{
+    padding: 10px;
     margin: 10px;
-    margin-left: 20px;
-    font-size: 40px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #9ea7a7;
+    flex: 1 100%;
+    border: 10px;
+    border-radius: 10px 10px;
 }
 
-.banner h2{
-    display: flex;
-    color: black;
-    font-size: 35px;
-    margin-top: -84px;
-    margin-left: 1129px;
+.header{
+    background: tomato;
+    height: 80px;
 }
 
-
-.banner img{
-    display:flex;
-    width: 100%;
-    height: 130px;
-    margin-bottom: 2%;
-    border-bottom: 5px solid rgb(220, 183, 179);
+.footer{
+    background: lightgreen;
+    height: 80px;
 }
 
-
-header nav ul li{
-    display: flex;
-    flex: 1;
-    float: left;
+.main{
+    background: deepskyblue;
+    height: 300px;
+    font-size: 24px;
 }
 
-
-
-a:link{
-    flex: 1;
-    padding: 15px;
-    margin-left: 50;
-    font-size: 23px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #9ea7a7;
+.aside1{
+    background: gold;
 }
 
-a:hover{
-    color: white;
+.aside2{
+    background: hotpink;
 }
 
-.about #work .contact h2{
-    display: flex;
+@media all and (min-width:800px){
+    .main{
+        flex:3;
+    }
+    .aside1 {
+        order:1;
+    }
+
+    .aside2 {
+        order:2;
+    }
+
+    .main{
+        order:2;
+    }
+
+    .footer {
+        order:0;
+    }
 }
 
-.about h2{
-    margin-left: 120px;
-    margin-top: 56px;
-    width: 200px;
-    font-size: 30px;
-    text-align: right;
-    color: #31343d;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    border-right: 3px solid black;
-    padding-right: 25px;
-    height: 240px;
-
-}
-    
-
-.about .bio{
-    position: absolute;
-    left: 450px;
-    top: 240px;
-    width: 60%;
-    text-wrap: balance;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-
-#work h2{
-    position: relative;
-    margin-left: 120px;
-    width: 200px;
-    top: 100px;
-    font-size: 30px;
-    text-align: right;
-    color: #31343d;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, 'Sans', Arial, sans-serif;
-    border-right: 3px solid black;
-    padding-right: 25px;
-    height: 700px;
-}
-
-#work .experience-1 img{
-    position: absolute;
-    left: 450px;
-    top: 570px;
-    width: 750px;
-    height: 200px;
-    z-index: -1;
-    border: #31343d solid 5px;
-} 
-
-#work .experience-1-banner{
-    position: absolute;
-    left: 1050px;
-    top: 720px;
-    background: #0a37bc;
-    width: 150px;
-    height: 50px;
-    border: #31343d solid 5px;
-} 
-
-#work .experience-2 img{
-    position: absolute;
-    left: 450px;
-    top: 800;
-    width: 340px;
-    height: 200px;
-    z-index: -1;
-    border: #31343d solid 5px;
-}
-
-#work .experience-2-banner{
-    position: absolute;
-    left: 640px;
-    top: 950px;
-    background: #9a9ca0;
-    width: 150px;
-    height: 50px;
-    border: #31343d solid 5px;
-}
-
-#work .experience-3 img{
-    position: absolute;
-    left: 860px;
-    top: 800;
-    width: 340px;
-    height: 200px;
-    z-index: -1;
-    border: #31343d solid 5px;
-}
-
-
-#work .experience-3-banner{
-    position: absolute;
-    left: 1050px;
-    top: 950px;
-    background: #94aee1;
-    width: 150px;
-    height: 50px;
-    border: #31343d solid 5px;
-} 
-
-#work .experience-4 img{
-    position: absolute;
-    left: 860px;
-    top: 1030;
-    width: 340px;
-    height: 200px;
-    z-index: -1;
-    border: #31343d solid 5px;
-}
-
-#work .experience-4-banner{
-    position: absolute;
-    left: 1050px;
-    top: 1180px;
-    background: #ace194;
-    width: 150px;
-    height: 50px;
-    border: #313d36 solid 5px;
-} 
-
-#work .experience-5 img{
-    position: absolute;
-    top: 1030px;
-    left: 450px;
-    width: 340px;
-    height: 200px;
-    z-index: -1;
-    border: 5px solid black;
-} 
-
-#work .experience-5-banner{
-    position: absolute;
-    left: 640px;
-    top: 1180px;
-    background: #e63088;
-    width: 150px;
-    height: 50px;
-    border: #313d36 solid 5px;
-} 
-
-
-.contact h2{
-    position: absolute;
-    margin-left: 162px;
-    top: 1500px;
-    font-size: 30px;
-    color: #31343d;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    border-right: 3px solid black;
-    padding-right: 25px;
-    height: 100px;
-}
-
-
-
-.contact ul li{
-    text-wrap: balance;
-    display: inline;
-    font-size: 25px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
-}
-
-.contact ul{
-    text-align: center;
-    margin-top: 350px;
-    margin-left: 130px;
-
-}
-
-footer{
-    text-wrap: balance;
-    text-align: center;
-    margin-top: 80px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding-bottom: 50px;
-}
-
-
-p{
-    font-size: 17px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+@media all and (min-width:600px){
+    .aside1{
+        flex: 1;
+    }
 }
 
